--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-starship.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-starship.dts
@@ -165,6 +165,14 @@
     pinctrl-0 = <&pinctrl_rgmii3_default>;
 };
 
+&mac3 { 
+    status = "okay"; 
+    phy-mode = "rmii"; 
+    use-ncsi; 
+    pinctrl-names = "default"; 
+    pinctrl-0 = <&pinctrl_rmii4_default>; 
+};
+
 // Enable emmc
 &emmc_controller {
     status = "okay";
