dts files: enable jtag for ranger toward thh fpga
this jtag will be used for firmware update of ranger fpga

Signed-off-by: Radivoje (Ogi) Jovanovic <rjovanovic@nvidia.com>

--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-ranger.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-ranger.dts
@@ -371,6 +371,11 @@
     status = "okay";
 };
 
+&jtag0 {
+    mux-gpios = <&gpio0 50 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+    status = "okay";
+};
+
 &jtag1 {
     mux-gpios = <&gpio0 126 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
     status = "okay";
