Add SPI1 functionality for FPGA-ERoT
This enables MCTP over SPI to the FPGA using SPI 1 (SPI 0 = BMC Code, SPI 2 = BMC Data)

Tested: on Skinnyjoe and E4869

Also verified that MCTP initiates traffic between BMC <-> FPGA ERoT and sends/receives correct data from Glacier

Fixes JIRA: https://jirasw.nvidia.com/browse/DGXOPENBMC-6871

Signed-off-by: Aushim Nagarkatti [anagarkatti@nvidia.com](mailto:anagarkatti@nvidia.com)

--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-e4869.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-e4869.dts
@@ -74,6 +74,17 @@
     };
 };
 
+&spi1raw {
+    status = "okay";
+    pinctrl-names = "default";
+    pinctrl-0 = <&pinctrl_spi1_default>;
+    spidev@0 {
+        spi-max-frequency = <25000000>;
+        compatible = "hgx,glacier";
+        status = "okay";
+    };
+};
+
 &spi2 {
     status = "okay";
     pinctrl-names = "default";
