dts: add PSU eeprom chip support for starship
Signed-off-by: Radivoje (Ogi) Jovanovic <rjovanovic@nvidia.com>

--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-skinnyJoe-P4498.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-skinnyJoe-P4498.dts
@@ -256,6 +256,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <16>;
     };
 };
 
@@ -266,6 +267,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <20>;
     };
 };
 
@@ -276,6 +278,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <24>;
     };
 };
 
