--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-e4869.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-e4869.dts
@@ -242,6 +242,7 @@
     bus-frequency = <400000>;
     i2c-switch@70 {
         compatible = "nxp,pca9546";
+        numbered-adapter = <16>;
         reg = <0x70>;
     };
 };
@@ -253,6 +254,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <20>;
     };
 };
 
@@ -263,6 +265,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <24>;
     };
 };
 
