--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-ranger.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-ranger.dts
@@ -264,6 +264,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <16>;
     };
 };
 
@@ -274,6 +275,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <20>;
     };
 };
 
@@ -281,9 +283,10 @@
 &i2c7 {
     status = "okay";
     bus-frequency = <400000>;
-    i2c-switch@71 {
+    i2c-switch@70 {
         compatible = "nxp,pca9546";
-        reg = <0x71>;
+        reg = <0x70>;
+        numbered-adapter = <24>;
     };
 };
 
@@ -330,6 +333,7 @@
     i2c-switch@70 {
         compatible = "nxp,pca9546";
         reg = <0x70>;
+        numbered-adapter = <28>;
     };
 };
 
