--- a/arch/arm/boot/dts/aspeed-bmc-nvidia-legocg1.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-nvidia-legocg1.dts
@@ -120,6 +120,20 @@
     };
 };
 
+&spi1 {
+    status = "okay";
+    pinctrl-names = "default";
+    pinctrl-0 = <&pinctrl_spi1_default>;
+	mux-gpio = <&gpio1 22 GPIO_ACTIVE_LOW>;
+
+    flash@0 {
+        status = "okay";
+        label = "fpga1";
+        spi-rx-bus-width = <1>;
+        spi-max-frequency = <20000000>;
+    };
+};
+
 &uart1 {
         status = "okay";        
 };
